force-app/main/default/objects/API_Log__c/fields/Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Appraisal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appraisal</label>
    <referenceTo>Appraisal__c</referenceTo>
    <relationshipLabel>API Logs</relationshipLabel>
    <relationshipName>API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>