force-app/main/default/objects/API_Log__c/fields/Callout_Failed__c.field-meta.xml
<CustomField>
    <fullName>Callout_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Callout Failed</label>
    <type>Checkbox</type>
</CustomField>