force-app/main/default/objects/API_Log__c/fields/Clear_Result__c.field-meta.xml
<CustomField>
    <fullName>Clear_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clear Result</label>
    <referenceTo>Clear_Result__c</referenceTo>
    <relationshipLabel>API Logs</relationshipLabel>
    <relationshipName>API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>