force-app/main/default/objects/API_Log__c/fields/Deal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Deal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Contact</label>
    <referenceTo>Deal_Contact__c</referenceTo>
    <relationshipLabel>API Logs</relationshipLabel>
    <relationshipName>API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>