force-app/main/default/objects/API_Log__c/fields/Deal_Document__c.field-meta.xml
<CustomField>
    <fullName>Deal_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Document</label>
    <referenceTo>Deal_Document__c</referenceTo>
    <relationshipLabel>API Logs</relationshipLabel>
    <relationshipName>API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>