force-app/main/default/objects/API_Log__c/fields/Request_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Request_Endpoint__c</fullName>
    <label>Request Endpoint</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>