force-app/main/default/objects/API_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appraisal</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Yardi</fullName>
            </value>
            <value>
                <fullName>Clear Capital</fullName>
            </value>
            <value>
                <fullName>Clarocity</fullName>
            </value>
            <value>
                <fullName>Valuation</fullName>
            </value>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>CoreLogic</fullName>
            </value>
            <value>
                <fullName>Beekin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>