force-app/main/default/objects/API_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Request_Endpoint__c</columns>
    <columns>Callout_Failed__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Deal__c</columns>
    <columns>Advance__c</columns>
    <columns>Response_Status_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>